修复deprecated警告